[project]
name = "retrivor-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "João Vitor de Oliveira Santos",email = "jvitor2000@outlook.com"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all] (>=0.15.3,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

